src/assets/styles/components/table.scss
/*.table-with-lines th:not(:last-child),
.table-with-lines td:not(:last-child) {
  border-right: 1px solid #eeeeee;
  margin: 10px;
}*/

.table-div {
  overflow-y: scroll;
  min-height: calc(100vh - 530px);
  max-height: calc(100vh - 530px);
}

.folders-div{
  display: flex;
  flex-direction: row;
}

.position-sticky-left{
  position: sticky ;
  left: 0px;
}
.content-scroll{
  overflow-x: scroll;
}

.invisible-scrollbar::-webkit-scrollbar {
  display: none;
}

#scroll-visible-section{
  overflow-x: scroll;
  width: 100%;
  height: 10px;
  &::-webkit-scrollbar-track {
    background: white;
  }
}

.scrollbar-color::-webkit-scrollbar-track {
  background: white;
}

.header-stick-top {
  position: sticky;
  top: 0;
  background-color: #f1f1f1;
}

.align-bottom{
  display: flex;
  align-items: flex-end;
}


#column{
  &-name{
    padding-left: 50px;
    width: 39%;
  }
  &-cid{
    width: 14%;
  }
  &-size{
    width: 12%;
  }
  &-type{
    width: 13%;
  }
}

#header-scroll-inv{
  overflow: scroll;

  &::-webkit-scrollbar {
    display: none;
  }
}

